[gd_scene load_steps=9 format=3 uid="uid://ctnr7wplmfgd0"]

[ext_resource type="FontFile" uid="uid://cws3a6byu1gb8" path="res://assets/other/HomeVideo-BLG6G.ttf" id="1_fsab8"]
[ext_resource type="Script" uid="uid://dcgt3tsfki464" path="res://scripts/scoreUpdater.gd" id="1_tjgkx"]
[ext_resource type="Script" uid="uid://81j3oxiafjh0" path="res://scripts/hud.gd" id="1_uo2fv"]
[ext_resource type="Script" uid="uid://deobv0aofyls" path="res://scripts/resolutionUpdater.gd" id="3_xw8sq"]
[ext_resource type="Texture2D" uid="uid://bduvxjnpsdyra" path="res://assets/sprites/stationary/tv.png" id="4_4hjp2"]
[ext_resource type="Texture2D" uid="uid://cuck6s6i3mbc2" path="res://assets/sprites/stationary/bossBarUnder.png" id="6_hd3ao"]
[ext_resource type="Texture2D" uid="uid://bx3g5hwd4cxno" path="res://assets/sprites/stationary/bossBarOver.png" id="7_0i1j5"]
[ext_resource type="Texture2D" uid="uid://b510fisd64mke" path="res://assets/sprites/stationary/bossBarProgress.png" id="8_mphia"]

[node name="hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uo2fv")

[node name="topLeft" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 60.0

[node name="scoreUpdater" type="Label" parent="topLeft" groups=["invisibleOnDeath"]]
unique_name_in_owner = true
z_index = -1
layout_mode = 0
offset_left = 50.0
offset_top = 111.0
offset_right = 340.0
offset_bottom = 172.0
theme_override_fonts/font = ExtResource("1_fsab8")
theme_override_font_sizes/font_size = 60
text = "Score: 0"
script = ExtResource("1_tjgkx")

[node name="resolutionUpdater" type="Label" parent="topLeft" groups=["invisibleOnDeath"]]
unique_name_in_owner = true
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 10.0
offset_top = 31.0
offset_right = 840.0
offset_bottom = 92.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_fsab8")
theme_override_font_sizes/font_size = 60
text = "Resolution: 1920x1080"
script = ExtResource("3_xw8sq")

[node name="topRight" type="Panel" parent="."]
self_modulate = Color(0, 1, 1, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0

[node name="life4" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = -1
texture_filter = 1
position = Vector2(1425, 95)
scale = Vector2(2, 2)
texture = ExtResource("4_4hjp2")

[node name="life3" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = -1
texture_filter = 1
position = Vector2(1550, 95)
scale = Vector2(2, 2)
texture = ExtResource("4_4hjp2")

[node name="life2" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = -1
texture_filter = 1
position = Vector2(1675, 95)
scale = Vector2(2, 2)
texture = ExtResource("4_4hjp2")

[node name="life1" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = -1
texture_filter = 1
position = Vector2(1800, 95)
scale = Vector2(2, 2)
texture = ExtResource("4_4hjp2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -77.0
offset_right = 400.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 50

[node name="bossHealthBar" type="TextureProgressBar" parent="MarginContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
value = 100.0
texture_under = ExtResource("6_hd3ao")
texture_over = ExtResource("7_0i1j5")
texture_progress = ExtResource("8_mphia")
texture_progress_offset = Vector2(40, 12)
